--- a/src/modules/multi-file-upload/css/multi.file.upload.module.css
+++ b/src/modules/multi-file-upload/css/multi.file.upload.module.css
@@ -3,6 +3,10 @@
     box-sizing: border-box;
 }
 
+.m-mfu {
+    font-weight: 400;
+}
+
 .m-mfu__btn--upload {
     display: inline-flex;
     padding: 0 20px;
