--- a/src/modules/universal-discovery/components/selected-content/css/selected.content.popup.component.css
+++ b/src/modules/universal-discovery/components/selected-content/css/selected.content.popup.component.css
@@ -1,13 +1,13 @@
-.selected-content-popup-component .popup-module {
+.c-selected-content-popup .c-popup {
     width: 640px;
 }
 
-.selected-content-popup-component .popup-module__content {
+.c-selected-content-popup .c-popup__content {
     display: flex;
     flex-wrap: wrap;
 }
 
-.selected-content-popup-component .selected-content-item-component {
+.c-selected-content-popup .c-selected-content-item {
     flex: 1 1 calc(50% - 8px);
     max-width: calc(50% - 8px);
     margin: 4px;
