--- a/src/modules/universal-discovery/components/popup/css/popup.component.css
+++ b/src/modules/universal-discovery/components/popup/css/popup.component.css
@@ -1,15 +1,15 @@
-.popup-component {
+.c-popup {
     background: #eee;
     padding: 16px;
     box-shadow: 0 0 30px 0 rgba(0,0,0,.35);
     position: relative;
 }
 
-.popup-component__title {
+.c-popup__title {
     margin-top: 0;
 }
 
-.popup-component__close {
+.c-popup__close {
     position: absolute;
     top: 16px;
     right: 16px;
