--- a/src/modules/sub-items/components/table-view/css/table.view.item.component.css
+++ b/src/modules/sub-items/components/table-view/css/table.view.item.component.css
@@ -23,6 +23,21 @@
     width: 7ch;
 }
 
+.c-table-view-item__inner-wrapper--disabled {
+    position: relative;
+}
+
+.c-table-view-item__inner-wrapper--disabled:before {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: '';
+    display: block;
+}
+
 .c-table-view-item__priority-value {
     max-width: 100%;
     height: 40px;
@@ -33,6 +48,7 @@
 
 .c-table-view-item__priority-value[disabled] {
     border: 0 none;
+    background: transparent;
     cursor: pointer;
 }
 
