EZP-28270: As an Editor, I want to edit content from sub-items and MFU

--- a/src/modules/sub-items/components/table-view/css/table.view.item.component.css
+++ b/src/modules/sub-items/components/table-view/css/table.view.item.component.css
@@ -103,6 +103,8 @@
 .c-table-view-item__btn--edit:hover,
 .c-table-view-item__btn--edit:focus {
     background: #0a4b67;
+    color: #fff;
+    text-decoration: none;
 }
 
 .c-table-view-item__btn--edit .c-icon {
