EZP-28395: [UDW] Implement content items selection limit

--- a/src/modules/universal-discovery/components/selected-content/css/selected.content.component.css
+++ b/src/modules/universal-discovery/components/selected-content/css/selected.content.component.css
@@ -30,3 +30,8 @@
     border-top: 12px solid #eee;
     transform: translateY(100%) translateY(-1px);
 }
+
+.c-selected-content__label--limit {
+    padding-left: 8px;
+    font-style: italic;
+}
