Replaced Icon components with AdminUI icons

--- a/src/modules/multi-file-upload/components/drop-area/css/drop.area.component.css
+++ b/src/modules/multi-file-upload/components/drop-area/css/drop.area.component.css
@@ -37,10 +37,10 @@
     display: none;
 }
 
-.c-drop-area .c-icon {
+.c-drop-area .ez-icon {
     fill: #fff;
-    stroke: #fff;
-    stroke-width: 16px;
+    width: 20px;
+    height: 20px;
     margin-right: 8px;
 }
 
