--- a/src/modules/sub-items/components/grid-view/css/grid.view.item.component.css
+++ b/src/modules/sub-items/components/grid-view/css/grid.view.item.component.css
@@ -16,8 +16,11 @@
     align-items: center;
 }
 
-.c-grid-view-item__content-type .c-icon {
+.c-grid-view-item__content-type .ez-icon {
+    width: 16px;
+    height: 16px;
     margin-right: 16px;
+    fill: #fff;
 }
 
 .c-grid-view-item__image {
