--- a/src/modules/multi-file-upload/css/multi.file.upload.module.css
+++ b/src/modules/multi-file-upload/css/multi.file.upload.module.css
@@ -9,7 +9,6 @@
 
 .m-mfu__btn--upload {
     display: inline-flex;
-    padding: 0 16px;
     border-radius: 4px;
     text-align: center;
     cursor: pointer;
@@ -21,7 +20,9 @@
     background-color: #f15a10;
     transition: background .3s ease-in-out;
     align-items: center;
-    height: 100%;
+    height: 40px;
+    width: 40px;
+    justify-content: center;
 }
 
 .m-mfu__btn--upload:hover,
