--- a/src/modules/sub-items/components/view-switcher/css/view.switcher.component.css
+++ b/src/modules/sub-items/components/view-switcher/css/view.switcher.component.css
@@ -4,18 +4,21 @@
 }
 
 .c-grid-switcher {
-    height: 50px;
-    width: 88px;
+    height: 40px;
+    width: 70px;
     border: 3px solid #0e77a3;
-    border-radius: 6px;
+    border-radius: 4px;
     display: flex;
     overflow: hidden;
+    background: #fff;
+    box-shadow: inset 0 0 2px 0 rgba(26,53,71,0.4);
+    padding: 2px;
 }
 
 .c-grid-switcher__option {
-    flex: 1 1 44px;
-    max-width: 44px;
-    height: 44px;
+    flex: 1 1 30px;
+    max-width: 30px;
+    height: 30px;
     padding: 0;
     margin: 0;
     border: 2px solid #fff;
@@ -28,11 +31,11 @@
 }
 
 .c-grid-switcher__option:first-of-type {
-    border-radius: 4px 0 0 4px;
+    border-radius: 2px 0 0 2px;
 }
 
 .c-grid-switcher__option:last-of-type {
-    border-radius: 0 4px 4px 0;
+    border-radius: 0 2px 2px 0;
 }
 
 .c-grid-switcher__option--active {
@@ -42,8 +45,8 @@
 .c-grid-switcher__option .ez-icon {
     fill: #0e77a3;
     margin: auto;
-    width: 24px;
-    height: 24px;
+    width: 18px;
+    height: 18px;
 }
 
 .c-grid-switcher__option--active .ez-icon {
