--- a/src/modules/sub-items/components/grid-view/css/grid.view.item.component.css
+++ b/src/modules/sub-items/components/grid-view/css/grid.view.item.component.css
@@ -25,13 +25,21 @@
 
 .c-grid-view-item__image {
     display: block;
-    width: 100%;
+    width: auto;
     max-width: 100%;
     min-height: 100px;
     max-height: 100%;
+    height: auto;
     border: 1px solid #757575;
     transition: border-color .3s ease-in-out;
     padding: 8px;
+}
+
+.c-grid-view-item__image-wrapper {
+    height: 140px;
+    width: 140px;
+    border-radius: 4px 4px 0 0;
+    background-color: #e5e3e3;
 }
 
 .c-grid-view-item__image:hover {
