--- a/src/modules/sub-items/components/grid-view/css/grid.view.item.component.css
+++ b/src/modules/sub-items/components/grid-view/css/grid.view.item.component.css
@@ -1,8 +1,11 @@
 .c-grid-view-item {
-    padding: 8px;
     cursor: pointer;
     text-decoration: none;
     transition: background .3s ease-in-out;
+    position: relative;
+    background: #f3f3f3;
+    border-radius: 4px;
+    margin-bottom: 8px;
 }
 
 .c-grid-view-item:hover,
@@ -12,48 +15,57 @@
 }
 
 .c-grid-view-item__content-type {
-    display: flex;
-    align-items: center;
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    background: #fff;
+    border-radius: 4px 0 0 0;
 }
 
 .c-grid-view-item__content-type .ez-icon {
     width: 16px;
     height: 16px;
-    margin-right: 16px;
-    fill: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .c-grid-view-item__image {
     display: block;
     width: auto;
-    max-width: 100%;
-    min-height: 100px;
-    max-height: 100%;
     height: auto;
-    border: 1px solid #757575;
+    max-width: 166px;
+    max-height: 166px;
     transition: border-color .3s ease-in-out;
-    padding: 8px;
 }
 
 .c-grid-view-item__image-wrapper {
-    height: 140px;
-    width: 140px;
+    height: 166px;
+    width: 166px;
     border-radius: 4px 4px 0 0;
     background-color: #e5e3e3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .c-grid-view-item__image:hover {
     border-color: #5c5c5c;
 }
 
-.c-grid-view-item__content-type,
 .c-grid-view-item__title {
     word-break: break-all;
     line-height: 20px;
     padding: 10px 0;
+    font-weight: 700;
+    padding: 0 8px;
 }
 
-.c-grid-view-item__title {
-    font-weight: 700;
-    text-align: center;
+.c-grid-view-item__image--none .ez-icon {
+    width: 64px;
+    height: 64px;
 }
