fix white icons

--- a/src/modules/sub-items/components/table-view/css/table.view.item.component.css
+++ b/src/modules/sub-items/components/table-view/css/table.view.item.component.css
@@ -112,7 +112,7 @@
 .c-table-view-item .ez-icon {
     width: 24px;
     height: 24px;
-    fill: #f15a10;
+    fill: #fff;
 }
 
 .c-table-view-item__link {
