EZP-28385: Design update on Sub-items grid view

--- a/src/modules/sub-items/components/grid-view/css/grid.view.item.component.css
+++ b/src/modules/sub-items/components/grid-view/css/grid.view.item.component.css
@@ -21,7 +21,7 @@
     left: 0;
     width: 30px;
     height: 30px;
-    background: #fff;
+    background: #fafafa;
     border-radius: 4px 0 0 0;
 }
 
