--- a/src/modules/sub-items/css/sub.items.module.css
+++ b/src/modules/sub-items/css/sub.items.module.css
@@ -33,7 +33,7 @@
 }
 
 .m-sub-items__list {
-    background: #fdfdfd;
+    background: #fff;
     font-size: 15px;
     line-height: 40px;
     text-align: left;
