--- a/src/modules/sub-items/components/grid-view/css/grid.view.component.css
+++ b/src/modules/sub-items/components/grid-view/css/grid.view.component.css
@@ -6,19 +6,12 @@
 .c-grid-view {
     display: flex;
     flex-wrap: wrap;
-    padding-left: 4px;
-    margin-top: 8px;
+    padding-left: 8px;
+    padding-top: 8px;
 }
 
 .c-grid-view .c-grid-view-item {
     flex: 1 1 calc(100% / 6);
     max-width: 166px;
-}
-
-.c-grid-view .c-grid-view-item + .c-grid-view-item {
-    margin-left: 8px;
-}
-
-.c-grid-view .c-grid-view-item:nth-child(7n) {
-    margin-left: 0;
+    margin-right: 8px;
 }
