EZP-28588: When Sub Items List module is empty it should not display an empty table state

--- a/src/modules/sub-items/components/table-view/css/table.view.component.css
+++ b/src/modules/sub-items/components/table-view/css/table.view.component.css
@@ -58,3 +58,8 @@
 	border-right: 3px solid transparent;
     border-bottom: 5px solid #333;
 }
+
+.c-table-view__body .c-no-items {
+    padding-top: 7px;
+    padding-left: 39px;
+}
