EZP-28591: When Sub Items List is empty the view switcher should be disabled

--- a/src/modules/sub-items/components/view-switcher/css/view.switcher.component.css
+++ b/src/modules/sub-items/components/view-switcher/css/view.switcher.component.css
@@ -52,3 +52,12 @@
 .c-grid-switcher__option--active .ez-icon {
     fill: #fff;
 }
+
+.c-grid-switcher__option--disabled {
+    pointer-events: none;
+    opacity: .5;
+}
+
+.c-grid-switcher--disabled {
+    cursor: not-allowed;
+}
