EZP-28592: Update the UDW look according to designs

--- a/src/modules/common/popup/css/popup.component.css
+++ b/src/modules/common/popup/css/popup.component.css
@@ -24,3 +24,9 @@
     font-size: 32px;
     cursor: pointer;
 }
+
+.c-popup__close .ez-icon {
+    width: 16px;
+    height: 16px;
+    fill: #333;
+}
