--- a/src/modules/universal-discovery/components/content-meta-preview/css/content.meta.preview.component.css
+++ b/src/modules/universal-discovery/components/content-meta-preview/css/content.meta.preview.component.css
@@ -1,55 +1,113 @@
 .c-meta-preview {
     background: #fff;
     height: 100%;
-    padding: 16px;
+    overflow-y: auto;
+    padding: 10px;
+    border-radius: 4px;
+}
+
+.c-meta-preview__wrapper {
+    height: calc(100% - 32px);
 }
 
 .c-meta-preview__title {
     margin: 0;
-    font-size: 20px;
-    text-align: center;
+    font-size: 16px;
+    font-weight: 700;
+    color: #515151;
+    line-height: 32px;
 }
 
 .c-meta-preview__name {
+    font-size: 16px;
     font-weight: 700;
+    line-height: 20px;
     margin: 8px 0;
+    word-break: break-all;
 }
 
-.c-meta-preview__type {
-    margin: 8px 0;
+.c-meta-preview__content-type {
+    margin: 0 auto 4px;
+    font-size: 15px;
+    color: #515151;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    width: 190px;
+}
+
+.c-meta-preview__image-wrapper {
+    width: 190px;
+    height: 190px;
+    display: flex;
+    align-items: center;
+    background: #e5e5e5;
+    margin-bottom: 10px;
 }
 
 .c-meta-preview__image {
     display: block;
     max-width: 100%;
-    min-width: 160px;
+    width: auto;
     height: auto;
-    margin: 16px 0;
+    max-height: 190px;
+    margin: auto;
+}
+
+.c-meta-preview__meta-wrapper {
+    width: 190px;
+    margin: auto;
 }
 
 .c-meta-preview__btn-wrapper {
     text-align: center;
+    margin: 16px 0;
 }
 
 .c-meta-preview__btn--select {
     padding: 8px;
     font-size: 16px;
-    font-weight: 700;
     border-radius: 4px;
     width: 100%;
     display: block;
-    background: linear-gradient(to bottom, #fff 0%, #e6e6e6 100%);
-    border: 1px solid #bbb;
+    background: #106d95;
+    color: #fff;
     cursor: pointer;
-    transition: background .3s var(--transition-function);
+    transition: background .3s cubic-bezier(.25, .8, .25, 1);
 }
 
 .c-meta-preview__btn--select[disabled] {
     cursor: not-allowed;
     background: #e6e6e6;
+    color: #333;
 }
 
 .c-meta-preview__btn--select:not([disabled]):hover,
 .c-meta-preview__btn--select:not([disabled]):focus {
-    background: linear-gradient(to bottom, #e6e6e6 0%, #fff 100%);
+    background: #00476F;
 }
+
+.c-meta-preview__icon {
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    fill: #646464;
+}
+
+.c-meta-preview__content-info {
+    color: #333;
+    line-height: 15px;
+    font-size: 13px;
+    padding: 0 10px 0 40px;
+}
+
+.c-meta-preview__content-info + .c-meta-preview__content-info {
+    margin-top: 16px;
+}
+
+.c-meta-preview__subtitle {
+    line-height: 15px;
+    font-size: 13px;
+    margin-bottom: 0;
+}
+
