--- a/src/modules/universal-discovery/components/finder/css/finder.component.css
+++ b/src/modules/universal-discovery/components/finder/css/finder.component.css
@@ -7,6 +7,7 @@
     flex-wrap: nowrap;
     height: 100%;
     overflow: auto;
+    border-radius: 4px;
 }
 
 .c-finder__branches .c-finder-tree-branch + .c-finder-tree-branch {
