--- a/src/modules/universal-discovery/components/search/css/search.component.css
+++ b/src/modules/universal-discovery/components/search/css/search.component.css
@@ -1,5 +1,6 @@
 .c-search {
     height: 100%;
+    overflow: auto;
 }
 
 .c-search__title {
@@ -9,4 +10,43 @@
 
 .c-search__form {
     margin: 16px 0;
+    display: flex;
+}
+
+.c-search__input {
+    border: 1px solid rgba(51,51,51,.3);
+    border-right: 0 none;
+    border-radius: 4px 0 0 4px;
+    background-color: #fff;
+    line-height: 30px;
+    padding: 0 8px;
+    min-width: 300px;
+    transition: border .3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.c-search__submit {
+    background: #f15a10;
+    line-height: 30px;
+    color: #fff;
+    border-radius: 0 4px 4px 0;
+    border: 1px solid #f15a10;
+    padding: 0 8px;
+    display: flex;
+    align-items: center;
+}
+
+.c-search__submit:focus {
+    outline: none;
+}
+
+.c-search__input:focus {
+    border-color: #106d95;
+    outline: none;
+}
+
+.c-search__submit .ez-icon {
+    fill: #fff;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
 }
