--- a/src/modules/universal-discovery/components/search/css/search.pagination.component.css
+++ b/src/modules/universal-discovery/components/search/css/search.pagination.component.css
@@ -12,14 +12,18 @@
 
 [class*="c-search-pagination__btn--"] {
     border: 0 none;
-    background: none;
-    color: blue;
-    font-size: 12px;
+    background: #106d95;
+    color: #fff;
+    font-size: 13px;
+    line-height: 15px;
     cursor: pointer;
+    border-radius: 4px;
+    padding: 8px 16px;
+    font-weight: 400;
 }
 
 [class*="c-search-pagination__btn--"][disabled] {
-    color: #bbb;
+    background: #646464;
     cursor: not-allowed;
 }
 
@@ -29,4 +33,8 @@
 
 .c-search-pagination__btn--last {
     float: right;
+}
+
+.c-search-pagination__btn--middle {
+    margin: 0 8px;
 }
