--- a/src/modules/universal-discovery/components/search/css/search.results.item.component.css
+++ b/src/modules/universal-discovery/components/search/css/search.results.item.component.css
@@ -2,10 +2,12 @@
 .c-search-results-item__type,
 .c-search-results-item__actions {
     padding: 8px 16px;
-    border-top: 1px solid #cbcbcb;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    font-size: 15px;
+    line-height: 20px;
+    border-top: 1px solid #445A64;
 }
 
 .c-search-results-item__name {
@@ -21,18 +23,26 @@
 }
 
 .c-search-results-item__btn--preview {
-    padding: 4px 8px;
-    font-size: 12px;;
-    border-radius: 4px;
-    width: 100%;
-    display: block;
-    background: linear-gradient(to bottom, #fff 0%, #e6e6e6 100%);
-    border: 1px solid #bbb;
+    background: none;
+    border: 0 none;
+    display: flex;
     cursor: pointer;
-    transition: background .3s var(--transition-function);
+    align-items: center;
+    padding: 0;
 }
 
-.c-search-results-item__btn--preview:hover,
 .c-search-results-item__btn--preview:focus {
-    background: linear-gradient(to bottom, #e6e6e6 0%, #fff 100%);
+    outline: none;
+}
+
+.c-search-results-item__btn--preview .ez-icon {
+    fill: #0f6d95;
+    width: 30px;
+    height: 30px;
+    transition: fill .3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.c-search-results-item__btn--preview:hover .ez-icon,
+.c-search-results-item__btn--preview:focus .ez-icon {
+    fill: #565e63;
 }
