--- a/src/modules/universal-discovery/components/selected-content/css/selected.content.popup.component.css
+++ b/src/modules/universal-discovery/components/selected-content/css/selected.content.popup.component.css
@@ -1,5 +1,6 @@
 .c-selected-content-popup .c-popup {
-    width: 640px;
+    padding: 8px;
+    min-width: 400px;
 }
 
 .c-selected-content-popup .c-popup__content {
@@ -7,8 +8,24 @@
     flex-wrap: wrap;
 }
 
+.c-selected-content-popup .c-popup__header {
+    margin-bottom: 4px;
+    margin-left: 6px;
+}
+
+.c-selected-content-popup .c-popup__title {
+    color: #2b84b1;
+    font-size: 17px;
+    line-height: 20px;
+}
+
+.c-selected-content-popup .c-popup__close {
+    right: 0;
+}
+
 .c-selected-content-popup .c-selected-content-item {
     flex: 1 1 calc(50% - 8px);
     max-width: calc(50% - 8px);
     margin: 4px;
+    border-radius: 2px 0 0 2px;
 }
