--- a/src/modules/universal-discovery/components/tab-nav/css/tab.nav.item.component.css
+++ b/src/modules/universal-discovery/components/tab-nav/css/tab.nav.item.component.css
@@ -1,21 +1,35 @@
 .c-tab-nav-item {
-    background: #f0fafa;
+    background: #eee;
     border: 0 none;
-    border-top: 3px solid #f0fafa;
     font-size: 16px;
-    padding: 8px 16px;
+    line-height: 30px;
+    padding: 4px 6px;
     outline: none;
-    font-weight: 700;
     cursor: pointer;
-    transition: background .3s ease-in-out, border-top .3s ease-in-out;
+    transition: background .3s cubic-bezier(.25, .8, .25, 1);
+    color: #515151;
+    display: flex;
+    align-items: center;
 }
 
 .c-tab-nav-item:hover,
 .c-tab-nav-item:focus {
-    background: #f8fdfd;
+    background: #e9e9e9;
+    border-radius: 8px 8px 0 0;
+    outline: none;
 }
 
-.c-tab-nav-item--selected {
-    background: #fff;
-    border-top-color: #b30;
+.c-tab-nav-item--selected,
+.c-tab-nav-item--selected:hover,
+.c-tab-nav-item--selected:focus {
+    background: #e3e3e3;
+    color: #333;
+    font-weight: 700;
+    border-radius: 4px 4px 0 0;
+}
+
+.c-tab-nav-item__icon {
+    width: 18px;
+    height: 18px;
+    margin-right: 8px;
 }
