--- a/src/modules/universal-discovery/css/universal.discovery.module.css
+++ b/src/modules/universal-discovery/css/universal.discovery.module.css
@@ -6,17 +6,14 @@
 .m-ud {
     position: absolute;
     z-index: 2;
-    width: 90vw;
-    height: 90vh;
+    width: 95vw;
+    height: 95vh;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background: #eee;
-    padding: 16px;
     box-shadow: 0 0 30px 0 rgba(0,0,0,.35);
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 48px 48px 1fr 48px;
+    border-radius: 4px;
 }
 
 .m-ud__wrapper {
@@ -31,11 +28,28 @@
 
 .m-ud__title {
     margin: 0;
-    grid-row: 1 / 2;
+    padding: 16px;
+    background: #dbdbdb;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+    border-radius: 6px 6px 0 0;
+}
+
+.m-ud__content-wrapper {
+    padding: 16px;
+    display: grid;
+    height: calc(100% - 64px);
+    grid-template-columns: auto;
+    grid-template-rows: 32px 1fr 64px;
+    grid-template-areas:
+        "nav"
+        "main"
+        "footer";
 }
 
 .m-ud__nav {
-    grid-row: 2 / 3;
+    grid-area: nav;
     display: flex;
     align-items: baseline;
 }
@@ -45,12 +59,13 @@
 }
 
 .m-ud__content {
-    grid-row: 3 / 6;
+    grid-area: main;
+    padding: 16px;
+    background: #e3e3e3;
+    border-radius: 4px;
 }
 
 .m-ud__panels {
-    padding: 16px;
-    background: #e3e3e3;
     overflow: auto;
     height: 100%;
 }
@@ -60,10 +75,9 @@
 }
 
 .m-ud__actions {
-    grid-row: 6 / 7;
-    height: 48px;
+    grid-area: footer;
     text-align: right;
-    margin-top: 16px;
+    padding-top: 16px;
     display: grid;
     grid-gap: 16px;
     grid-template-columns: 1fr 1fr;
@@ -78,33 +92,39 @@
     grid-column: 2 / 3;
 }
 
-.m-ud__action--cancel {
-    background: none;
+[class*="m-ud__action--"] {
     font-size: 16px;
     border: 0 none;
-    padding: 8px;
+    padding: 8px 32px;
+    color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background .3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.m-ud__action--cancel {
     margin: 0 16px;
+    background: #646464;
+}
+
+.m-ud__action--cancel:hover,
+.m-ud__action--cancel:focus {
+    background: #3e3e3e;
 }
 
 .m-ud__action--confirm {
-    padding: 8px;
-    font-size: 16px;
     font-weight: 700;
-    border-radius: 4px;
-    background: linear-gradient(to bottom, #fff 0%, #e6e6e6 100%);
-    border: 1px solid #bbb;
-    cursor: pointer;
-    transition: background .3s var(--transition-function);
+    background: #f15a10;
 }
 
 .m-ud__action--confirm:hover,
 .m-ud__action--confirm:focus {
-    background: linear-gradient(to bottom, #e6e6e6 0%, #fff 100%);
+    background: #cb3400;
 }
 
 .m-ud__action--confirm[disabled] {
     cursor: not-allowed;
-    background: #e6e6e6;
+    opacity: .3;
 }
 
 [class*="m-ud__tabs--"] {
@@ -113,16 +133,17 @@
 
 .m-ud--with-preview .m-ud__content {
     display: grid;
-    grid-template-columns: auto 300px;
+    grid-template-columns: 1fr 230px;
     grid-column-gap: 16px;
+    grid-template-areas: "c-main c-preview";
 }
 
 .m-ud--with-preview .m-ud__panels {
-    grid-column: 1 / 2;
+    grid-area: c-main;
 }
 
 .m-ud--with-preview .m-ud__preview {
-    grid-column: 2 / 3;
+    grid-area: c-preview;
 }
 
 .m-ud--with-preview.m-ud--with-selected-content .m-ud__panels {
