EZP-28643: As a user I would to see an indicator showing me that the selected location is loading its children in UDW

--- a/src/modules/universal-discovery/components/finder/css/finder.tree.leaf.component.css
+++ b/src/modules/universal-discovery/components/finder/css/finder.tree.leaf.component.css
@@ -48,3 +48,16 @@
 .c-finder-tree-leaf:focus:after {
     border-left-color: #646464;
 }
+
+.c-finder-tree-leaf--selected.c-finder-tree-leaf--loading:after {
+    display: none;
+}
+
+.c-finder-tree-leaf--loading .ez-icon {
+    width: 16px;
+    height: 16px;
+    fill: #fff;
+    position: absolute;
+    right: 12px;
+    top: 5px;
+}
