EZP-28841: Content On the Fly v2

--- a/src/modules/universal-discovery/components/finder/css/finder.tree.leaf.component.css
+++ b/src/modules/universal-discovery/components/finder/css/finder.tree.leaf.component.css
@@ -61,3 +61,10 @@
     right: 12px;
     top: 5px;
 }
+
+.c-finder-tree-leaf--not-selectable,
+.c-finder-tree-leaf--not-selectable:hover,
+.c-finder-tree-leaf--not-selectable:focus {
+    background-color: #eee;
+    cursor: not-allowed;
+}
