EZP-28922: Multi-file upload modal design consistency

--- a/src/modules/common/popup/css/popup.component.css
+++ b/src/modules/common/popup/css/popup.component.css
@@ -1,8 +1,9 @@
 .c-popup {
-    background: #eee;
+    background: #ededed;
     padding: 16px;
     box-shadow: 0 0 30px 0 rgba(0,0,0,.35);
     position: relative;
+    border-radius: 4px;
 }
 
 .c-popup__header {
