--- a/src/modules/multi-file-upload/components/upload-list/css/upload.item.component.css
+++ b/src/modules/multi-file-upload/components/upload-list/css/upload.item.component.css
@@ -42,11 +42,19 @@
 [class*="c-upload-list-item__message--"] {
     font-style: italic;
     font-size: 12px;
+    color: #00825c;
+}
+
+.c-upload-list-item__message--error {
+    padding-top: 3px;
+    color: #aa0000;
+    font-weight: 700;
 }
 
 .c-upload-list-item__actions {
     flex: 1 1 44px;
     max-width: 88px;
+    padding-top: 8px;
     text-align: right;
 }
 
@@ -54,21 +62,44 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    margin-right: 15px;
     width: 44px;
     height: 44px;
     cursor: pointer;
 }
 
-[class*="c-upload-list-item__action--"] .ez-icon {
+[class*="c-upload-list-item__action--"]:last-child {
+    margin-right: 0;
+}
+
+.c-upload-list-item__action--edit {
     fill: #f15a10;
     transition: all .3s ease-in-out;
     width: 20px;
     height: 20px;
 }
 
-[class*="c-upload-list-item__action--"] .ez-icon:hover,
-[class*="c-upload-list-item__action--"] .ez-icon:focus {
+.c-upload-list-item__action--edit:hover,
+.c-upload-list-item__action--edit:focus {
     fill: #c3480b;
+}
+
+.c-upload-list-item__action--delete {
+    fill: #d92d42;
+}
+
+.c-upload-list-item__action--delete:hover,
+.c-upload-list-item__action--delete:focus {
+    fill: #b32032;
+}
+
+.c-upload-list-item__action--abort {
+    fill: #878787;
+}
+
+.c-upload-list-item__action--abort:hover,
+.c-upload-list-item__action--abort:focus {
+    fill: #555;
 }
 
 .c-upload-list-item .c-progress-bar {
