--- a/src/modules/common/popup/css/popup.component.css
+++ b/src/modules/common/popup/css/popup.component.css
@@ -27,7 +27,13 @@
 }
 
 .c-popup__close .ez-icon {
-    width: 16px;
-    height: 16px;
+    width: 24px;
+    height: 24px;
     fill: #333;
+    opacity: .5;
+    transition: opacity .3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.c-popup__close .ez-icon:hover {
+    opacity: 1;
 }
