EZP-28362: Display Language name and not language code.

--- a/src/modules/sub-items/components/table-view/css/table.view.item.component.css
+++ b/src/modules/sub-items/components/table-view/css/table.view.item.component.css
@@ -8,6 +8,14 @@
     line-height: 20px;
 }
 
+.c-table-view-item__cell--translations {
+    max-width: 100px;
+}
+
+.c-table-view-item__translation {
+    display: block;
+}
+
 .c-table-view-item__text-wrapper {
     text-overflow: ellipsis;
     white-space: nowrap;
